@@ -1,5 +1,5 @@
 
-R version 3.4.0 Patched (2017-04-28 r72638) -- "You Stupid Darkness"
+R version 3.4.0 Patched (2017-05-19 r72718) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -199,13 +199,60 @@ c(3217, 205887, 3294199, 105414357, 3373259426, 107944301636,
 [7] "110010010000111111011010101000100010000110"                      
 [8] "1100100100001111110110101010001000100001011010001100001000110101"
 > 
+> ###--- and possibly the _internal_   sprintfMpfr() ---  see also ./tstHexBin.R
+> ## TODO: use examples above for checking formatBin() <--->        ============
+> spr <- Rmpfr:::sprintfMpfr
+> ##=            ~~~~~~~~~~~
+> (fB.04 <- formatBin(i16.04 <- mpfr(0:16,  4)))
+ [1] +0b0.000p+0 +0b1.000p+0 +0b1.000p+1 +0b1.100p+1 +0b1.000p+2 +0b1.010p+2
+ [7] +0b1.100p+2 +0b1.110p+2 +0b1.000p+3 +0b1.001p+3 +0b1.010p+3 +0b1.011p+3
+[13] +0b1.100p+3 +0b1.101p+3 +0b1.110p+3 +0b1.111p+3 +0b1.000p+4
+> (fB.60 <- formatBin(i16.60 <- mpfr(0:16, 60)))
+ [1] +0b0.00000000000000000000000000000000000000000000000000000000000p+0
+ [2] +0b1.00000000000000000000000000000000000000000000000000000000000p+0
+ [3] +0b2.00000000000000000000000000000000000000000000000000000000000p+0
+ [4] +0b3.00000000000000000000000000000000000000000000000000000000000p+0
+ [5] +0b4.00000000000000000000000000000000000000000000000000000000000p+0
+ [6] +0b5.00000000000000000000000000000000000000000000000000000000000p+0
+ [7] +0b6.00000000000000000000000000000000000000000000000000000000000p+0
+ [8] +0b7.00000000000000000000000000000000000000000000000000000000000p+0
+ [9] +0b8.00000000000000000000000000000000000000000000000000000000000p+0
+[10] +0b9.00000000000000000000000000000000000000000000000000000000000p+0
+[11] +0ba.00000000000000000000000000000000000000000000000000000000000p+0
+[12] +0bb.00000000000000000000000000000000000000000000000000000000000p+0
+[13] +0bc.00000000000000000000000000000000000000000000000000000000000p+0
+[14] +0bd.00000000000000000000000000000000000000000000000000000000000p+0
+[15] +0be.00000000000000000000000000000000000000000000000000000000000p+0
+[16] +0bf.00000000000000000000000000000000000000000000000000000000000p+0
+[17] +0b1.00000000000000000000000000000000000000000000000000000000000p+4
+> stopifnot(
++     identical(sub("00p","p", spr(i16.60, bits = 10)),
++                              spr(i16.60, bits = 4)),
++     identical(spr(i16.60, bits = 4),
++               spr(i16.04, bits = 4))
++     ,
++     ## identical(i16.04, mpfr(fB.04)) # not TRUE, but this is
++     all.equal(i16.04, mpfr(fB.04), tolerance = 0)
++     ,
++     TRUE ## FAILS   identical(i16.60, mpfr(fB.60))
++ )
+> 
+> ## FIXME: still not ok
+> try( mpfr(fB.60) )
+Error in mpfr.default(x, base = 2, precBits = precBits, ...) : 
+  str2mpfr1_list(x, *): x[3] cannot be made into MPFR
+> ## not even this one
+> try( mpfr(formatBin(mpfr(2, precBits = 60))) )
+Error in mpfr.default(x, base = 2, precBits = precBits, ...) : 
+  str2mpfr1_list(x, *): x[1] cannot be made into MPFR
+> 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  0.466 0.063 0.53 0.002 0 
+Time elapsed:  0.621 0.084 0.774 0.001 0.002 
 > 
 > if(!interactive()) warnings()
 NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.468   0.063   0.530 
+  0.622   0.086   0.775 
